duicontrolpanel (0.9.5~unreleased) unstable; urgency=low

  * up

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 11 Nov 2010 10:36:48 +0100

duicontrolpanel (0.9.4) unstable; urgency=low

  * Changes: new type of briefview: special
  * Changes: a logical MainPage category to add applet icons to the
    mainpage
  * Changes: by default disables skipping the category page if it has
    one applet in the list only

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 10 Nov 2010 16:58:22 +0100

duicontrolpanel (0.9.3.1) unstable; urgency=low

  * Reverts adding a title on applet pages

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 10 Nov 2010 11:30:41 +0100

duicontrolpanel (0.9.3) unstable; urgency=low

  * Fixes: BMC#7195 - App is shown on the tray and in the launcher
  * Fixes: NB#199641 - Settings app view switches back from applet view
    to main view when we try to open the settings app once again from
    launcher

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 09 Nov 2010 17:28:40 +0100

duicontrolpanel (0.9.2) unstable; urgency=low

  * Fixes: applet icon value texts are not appearing sometimes
  * Changes: controlpanel turns black (uses inverted theme)
  * Fixes: NB#202583 - duicontrolpanel: built without optimizations

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 03 Nov 2010 12:04:17 +0100

duicontrolpanel (0.9.1) unstable; urgency=low

  * Fixes: NB#200458 - Returning false from DcpWidget::back() doesn't
    prevent page closing
  * Fixes: NB#200663 - SECURITY - duicontrolpanel should depend on
    clean-device
  * Fixes: NB#201666 - mcp can't be compiled on meego

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 02 Nov 2010 15:04:17 +0100

duicontrolpanel (0.9.0) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: applet debugs/warnings were not coming from brief supplier
    process, even with -output-level
  * Drilldown menus, new categories

  [ Robert Manner ]
  * Fixes: NB#199886 - Startup time of dcp increased a bit